--- a/classwork/integer_limit_test.ipynb
+++ b/classwork/integer_limit_test.ipynb
@@ -2,39 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.8420693676673889\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
-    "\n",
-    "\n",
-    "value=random.uniform(-1, 1)\n",
-    "print(value)\n",
-    "\n"
+    "i = 1\n",
+    "i = i+1\n",
+    "print(i)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2345688\n",
+      "2345687\n"
+     ]
+    }
+   ],
    "source": [
-    "def montecarlo_pi (number_of_shots):\n",
-    "    import random\n",
-    "    \n",
-    "    for i in range (0, number_of_shots):\n",
-    "        x = 1\n",
-    "        y = 1\n",
-    "        return"
+    "i = 2345687\n",
+    "print(i+1)\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0000000000000004"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+2**-51"
    ]
   },
   {
@@ -42,9 +64,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "montecarlo_pi(50)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
