--- a/classwork/mrb5843_CH4.ipynb
+++ b/classwork/mrb5843_CH4.ipynb
@@ -5,7 +5,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "pi_approx = 0.0\n",
+    " \n",
+    "for n in range (5000):\n",
+    "    term = (-1)**n / (2*n + 1)\n",
+    "    pi_approx += term\n",
+    "if (n + 1)% 100 == 0 :\n",
+    "    pi_estimate = 4 * pi_approx\n",
+    "    relative_error = abs(pi_estimate - np.pi)/ np.pi\n",
+    "\n",
+    "print(f\"Terms: {n+1:4d}, π estimate: {pi_estimate:.8f}, Relative error: {relative_error:.8e}\")"
+   ]
   }
  ],
  "metadata": {
